# nu_plugin_ldap

./: Cargo.toml  README.md
src/: config.rs  ldap.rs  lib.rs  main.rs
src/commands/: mod.rs  table.rs
src/commands/search/: command.rs  helper.rs  mod.rs  opts.rs  search_impl.rs
