[package]
authors = ["Aaron DeVore <adevore@pdx.edu>"]
description = "Nushell plugin for LDAP queries"
repository = "https://github.com/adevore/nu_plugin_ldap"
name = "nu_plugin_ldap"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["ldap", "nu", "nushell", "plugin"]
categories = ["command-line-utilities"]

[[bin]]
name = "nu_plugin_ldap"
bench = false

[lib]
bench = false

[dependencies]
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
nu-plugin = "0.110.0"
nu-protocol = { version = "0.110.0", features = ["plugin"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt", "tracing"] }
tracing = { version = "0.1.44", features = ["std"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
